--- a/crawling_code/conference_crawling_05.ipynb
+++ b/crawling_code/conference_crawling_05.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
    "source": [
     "#제목,일시,장소\n",
     "\n",
-    "exchange = soup.select('body > div > main > div > ul > li > a > dl ')\n",
+    "exchange_title = soup.select('body > div > main > div > ul > li > a > dl ')\n",
     "for titles in exchange :\n",
     "    title = titles.text.strip()\n",
     "    \n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "11  2020, 비대면 언택트(Un+Contact) 마케팅이 뜬다!\\n일시 : 2019년..."
       ]
      },
-     "execution_count": 19,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,9 +194,9 @@
     "import pandas as pd\n",
     "\n",
     "title_list = []\n",
-    "#exchange_tilte = soup.select('body > div > main > div > ul > li > a > dl  ')\n",
+    "exchange_title = soup.select('body > div > main > div > ul > li > a > dl  ')\n",
     "\n",
-    "for titles in exchange:\n",
+    "for titles in exchange_title:\n",
     "    title = titles.text.strip()\n",
     "    title_list.append(title)\n",
     "title =pd.DataFrame(title_list, columns=['title'])\n",
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -230,8 +230,8 @@
    "source": [
     "# 하이퍼링크\n",
     "\n",
-    "exchange = soup.select('body > div > main > div > ul > li > a')\n",
-    "for link in exchange :\n",
+    "exchange_link = soup.select('body > div > main > div > ul > li > a')\n",
+    "for link in exchange_link :\n",
     "\n",
     "    a = \"http://conference.etnews.com/\"\n",
     "\n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
        "11  http://conference.etnews.com/conference_view.h..."
       ]
      },
-     "execution_count": 22,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -385,8 +385,8 @@
    "source": [
     "# 이미지\n",
     "\n",
-    "exchange = soup.select('body > div > main > div > ul > li > a > dl > dd.thumb > img')\n",
-    "for img in exchange :\n",
+    "exchange_img = soup.select('body > div > main > div > ul > li > a > dl > dd.thumb > img')\n",
+    "for img in exchange_img :\n",
     "\n",
     "    \n",
     "\n",
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
        "11  https://img.etnews.com/photo_main/conference/2..."
       ]
      },
-     "execution_count": 15,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
     "img_list = []\n",
     "exchange_img = soup.select('body > div > main > div > ul > li > a > dl > dd.thumb > img')\n",
     "\n",
-    "for imgs in exchange:\n",
+    "for imgs in exchange_img:\n",
     "    \n",
     "    img = imgs.attrs['src']\n",
     "    img_list.append(img)\n",
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
        "11  https://img.etnews.com/photo_main/conference/2...  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,92 +679,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'href'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-199-2d6366cdc87b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     66\u001b[0m     \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreset_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 68\u001b[1;33m \u001b[0mfinal_df\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mconference_05\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-199-2d6366cdc87b>\u001b[0m in \u001b[0;36mconference_05\u001b[1;34m(startpage, endpage)\u001b[0m\n\u001b[0;32m     61\u001b[0m     \u001b[0mdf\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     62\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstartpage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mendpage\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 63\u001b[1;33m         \u001b[0mtemp\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mget_articles\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     64\u001b[0m         \u001b[0mdf\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtemp\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     65\u001b[0m     \u001b[1;31m#index 번호 다시 매기기\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-199-2d6366cdc87b>\u001b[0m in \u001b[0;36mget_articles\u001b[1;34m(page)\u001b[0m\n\u001b[0;32m     32\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mlinks\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mexchange\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m         \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"http://conference.etnews.com/\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 34\u001b[1;33m         \u001b[0mlink\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mlinks\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mattrs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'href'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     35\u001b[0m         \u001b[0mlink_list\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlink\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     36\u001b[0m     \u001b[0mlink\u001b[0m \u001b[1;33m=\u001b[0m\u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlink_list\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'link'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'href'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 함수로 만들기\n",
-    "# def get_articles(page):\n",
+    "def get_articles():\n",
     "    \n",
-    "#     import requests\n",
-    "#     from bs4 import BeautifulSoup\n",
-    "#     import re\n",
+    "    import requests\n",
+    "    from bs4 import BeautifulSoup\n",
+    "    import re\n",
     "  \n",
-    "#     url = \"http://conference.etnews.com/index.html?page={}\".format(page)\n",
+    "    url = \"http://conference.etnews.com/index.html?page=1\"\n",
     "    \n",
-    "#     exchange = soup.select('body > div > main > div > ul ')\n",
+    "    exchange = soup.select('body > div > main > div > ul ')\n",
     "    \n",
     "    \n",
     "    \n",
-    "#     #제목\n",
-    "#     import pandas as pd\n",
+    "    #제목\n",
+    "    import pandas as pd\n",
     "\n",
-    "#     title_list = []\n",
-    "#     exchange_tilte = soup.select('li > a > dl')\n",
+    "    title_list = []\n",
+    "    exchange_title = soup.select('li > a > dl')\n",
     "\n",
-    "#     for titles in exchange:\n",
-    "#         title = titles.text.strip()\n",
-    "#         title_list.append(title)\n",
-    "#     title =pd.DataFrame(title_list, columns=['title'])\n",
+    "    for titles in exchange_title:\n",
+    "        title = titles.text.strip()\n",
+    "        title_list.append(title)\n",
+    "    title =pd.DataFrame(title_list, columns=['title'])\n",
     "    \n",
     "    \n",
     "    \n",
-    "#     #링크만 뽑아내기\n",
+    "    #링크만 뽑아내기\n",
     "   \n",
-    "#     link_list = []\n",
-    "#     exchange_link = soup.select('li > a ')\n",
+    "    link_list = []\n",
+    "    exchange_link = soup.select('li > a ')\n",
     "\n",
-    "#     for links in exchange:\n",
-    "#         a = \"http://conference.etnews.com/\"\n",
-    "#         link = (a+links.attrs['href'])\n",
-    "#         link_list.append(link)\n",
-    "#     link =pd.DataFrame(link_list, columns=['link'])\n",
+    "    for links in exchange_link:\n",
+    "        a = \"http://conference.etnews.com/\"\n",
+    "        link = (a+links.attrs['href'])\n",
+    "        link_list.append(link)\n",
+    "    link =pd.DataFrame(link_list, columns=['link'])\n",
     "    \n",
     "    \n",
     "    \n",
     "    \n",
     "    \n",
-    "#     #이미지 뽑아내기\n",
-    "#     img_list = []\n",
-    "#     exchange_img = soup.select('body > div > main > div > ul > li > a > dl > dd.thumb > img')\n",
+    "    #이미지 뽑아내기\n",
+    "    img_list = []\n",
+    "    exchange_img = soup.select('body > div > main > div > ul > li > a > dl > dd.thumb > img')\n",
     "\n",
-    "#     for imgs in exchange_img:\n",
+    "    for imgs in exchange_img:\n",
     "    \n",
-    "#         imgs = imgs.attrs['src']\n",
-    "#         img_list.append(imgs)\n",
+    "        imgs = imgs.attrs['src']\n",
+    "        img_list.append(imgs)\n",
     "\n",
     "\n",
-    "#     img =pd.DataFrame(link_list, columns=['img'])\n",
+    "    img =pd.DataFrame(link_list, columns=['img'])\n",
     "    \n",
-    "#     result=pd.concat([title, link], axis=1)\n",
+    "    result=pd.concat([title, link], axis=1)\n",
     "     \n",
-    "#     return result\n",
+    "    return result\n",
     "\n",
-    "# # 자동으로 일정 페이지 크롤링해줘서 데이터프레임 만들어주기\n",
-    "# def conference_05(startpage, endpage):\n",
-    "#     import pandas as pd\n",
-    "#     df=pd.DataFrame([])\n",
-    "#     for i in range(startpage, endpage+1):\n",
-    "#         temp=get_articles(i)\n",
-    "#         df= pd.concat([df,temp],axis=0)\n",
-    "#     #index 번호 다시 매기기\n",
-    "#     df.reset_index(drop=True, inplace=True)\n",
-    "#     return df\n",
-    "# final_df= conference_05(1,2)   "
+    " "
    ]
   },
   {
