seperate coference table columns

--- a/crawling_code/04_crawling_all_bigdata.ipynb
+++ b/crawling_code/04_crawling_all_bigdata.ipynb
@@ -44,7 +44,7 @@
     "    #상세내용 뽑아내기\n",
     "    preview_list = []\n",
     "    for article in articles:\n",
-    "        preview = article.find_element_by_css_selector(\"div.assetText > a > p\").text\n",
+    "        preview = article.find_element_by_css_selector(\"div.assetText > a > p\").text[:200]\n",
     "        preview_list.append(preview)\n",
     "    preview=pd.DataFrame(preview_list,columns=['preview'])\n",
     "    \n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,12 +118,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'대규모 병렬 처리(Massively Parallel Processing, MPP) 데이터베이스는 데이터와 쿼리를 일반 서버로 구성된 클러스터의 각 노드로 분산시킨다. 그린플럼(Greenplum)의 MPP 데이터 웨어하우스 구축 방법은 독특하다. 기존  ...'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "articles =dom.select('.news_list_')\n",
-    "# articles[0]"
+    "articles[0].select_one('.news_list_has_thumb_size > .news_body_summary').text.replace(\"\\n\", \"\").replace(\"\\t\", \"\").strip()"
    ]
   },
   {
