add python file

--- a/crawling_code/01_ZD_Net.ipynb
+++ b/crawling_code/01_ZD_Net.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -535,21 +535,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>74</td>\n",
+       "      <td>구글, AI가 선별한 유익한 기사 상단에 먼저 표출</td>\n",
+       "      <td>http://www.zdnet.co.kr/view/?no=20191212095140</td>\n",
+       "      <td>구글이 뉴스의 홍수 속에서 보다 풍부한 내용을 담고 있는 뉴스만 골라 검색 결과 상...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>75</td>\n",
        "      <td>삼성전기, AI 기술로 '1천억원' 아낀다</td>\n",
        "      <td>http://www.zdnet.co.kr/view/?no=20191212091448</td>\n",
        "      <td>삼성전기가 인공지능 기술을 통해 1천41억원에 달하는 비용을 절감하는 성과를 창출했...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>75</td>\n",
+       "      <td>76</td>\n",
        "      <td>내년 ICT 부처 예산, AI·소부장 중심으로 확대</td>\n",
        "      <td>http://www.zdnet.co.kr/view/?no=20191211150537</td>\n",
        "      <td>10일 국회 본회의를 통과한 내년도 예산안 기금운용계획 수정안에서 ICT 산업을 담...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>76</td>\n",
-       "      <td>찾아가는 복지 서비스, ICT로 실현한다</td>\n",
-       "      <td>http://www.zdnet.co.kr/view/?no=20191210172023</td>\n",
-       "      <td>인공지능(AI), 클라우드 등 첨단 ICT 기술 기반 혁신이 공공 분야에서도 점차 ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -557,22 +557,22 @@
       ],
       "text/plain": [
        "                           title  \\\n",
-       "74       삼성전기, AI 기술로 '1천억원' 아낀다   \n",
-       "75  내년 ICT 부처 예산, AI·소부장 중심으로 확대   \n",
-       "76        찾아가는 복지 서비스, ICT로 실현한다   \n",
+       "74  구글, AI가 선별한 유익한 기사 상단에 먼저 표출   \n",
+       "75       삼성전기, AI 기술로 '1천억원' 아낀다   \n",
+       "76  내년 ICT 부처 예산, AI·소부장 중심으로 확대   \n",
        "\n",
        "                                              link  \\\n",
-       "74  http://www.zdnet.co.kr/view/?no=20191212091448   \n",
-       "75  http://www.zdnet.co.kr/view/?no=20191211150537   \n",
-       "76  http://www.zdnet.co.kr/view/?no=20191210172023   \n",
+       "74  http://www.zdnet.co.kr/view/?no=20191212095140   \n",
+       "75  http://www.zdnet.co.kr/view/?no=20191212091448   \n",
+       "76  http://www.zdnet.co.kr/view/?no=20191211150537   \n",
        "\n",
        "                                              preview  \n",
-       "74  삼성전기가 인공지능 기술을 통해 1천41억원에 달하는 비용을 절감하는 성과를 창출했...  \n",
-       "75  10일 국회 본회의를 통과한 내년도 예산안 기금운용계획 수정안에서 ICT 산업을 담...  \n",
-       "76  인공지능(AI), 클라우드 등 첨단 ICT 기술 기반 혁신이 공공 분야에서도 점차 ...  "
+       "74  구글이 뉴스의 홍수 속에서 보다 풍부한 내용을 담고 있는 뉴스만 골라 검색 결과 상...  \n",
+       "75  삼성전기가 인공지능 기술을 통해 1천41억원에 달하는 비용을 절감하는 성과를 창출했...  \n",
+       "76  10일 국회 본회의를 통과한 내년도 예산안 기금운용계획 수정안에서 ICT 산업을 담...  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
